--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -69,11 +69,14 @@
 .wc-shortcodes-accordion .wc-shortcodes-accordion-trigger:first-child {
 	margin-top: 0; 
 }
+.wc-shortcodes-accordion .wc-shortcodes-accordion-content-wrapper {
+	overflow: hidden;
+	height: 0;
+}
 .wc-shortcodes-accordion .wc-shortcodes-accordion-content {
 	padding: 20px;
 	border: 1px solid #cccccc;
 	border-top: 0px; 
-	display: none;
 }
 .wc-shortcodes-accordion.wc-shortcodes-accordion-layout-none .wc-shortcodes-accordion-content {
 	padding: 20px 0;
@@ -144,7 +147,6 @@
 	margin-top: 0; 
 }
 .wc-shortcodes-toggle .wc-shortcodes-toggle-container {
-	display: none;
 	overflow: hidden;
 	padding: 20px;
 	border: 1px solid #cccccc;
@@ -156,6 +158,10 @@
 }
 .wc-shortcodes-toggle .wc-shortcodes-toggle-container *:last-child {
 	margin-bottom: 0 
+}
+.wc-shortcodes-toggle .wc-shortcodes-toggle-content-wrapper {
+	overflow: hidden;
+	height: 0;
 }
 
 
@@ -200,7 +206,12 @@
 	border-left: solid 1px #cccccc;
 	border-right: solid 1px #cccccc;
 	border-bottom: solid 1px #cccccc; 
-	display: none;
+}
+.wc-shortcodes-tabs .tab-content-wrapper {
+	overflow: hidden;
+}
+.wc-shortcodes-tabs .tab-content-wrapper.tab-content-hide {
+	height: 0;
 }
 .wc-shortcodes-tabs.wc-shortcodes-tabs-layout-none .tab-content {
 	padding: 20px 0;
