Added overflow hidden to collage wrapper

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2005,6 +2005,7 @@ pre.pre-wrap {
  * ----------------------------------------------------------------------------
  */
 .wc-shortcodes-collage-wrapper {
+	overflow: hidden;
 }
 .wc-shortcodes-collage.wc-shortcodes-collage-template-collage1 {
 }
